# SimpleCalculator

./: .gitignore  CMakeLists.txt  simpleCalculator.kdev4
include/: evaluator.h  precedence.h  token.h  tokenizer.h  tokentype.h
src/: main.cpp
